# vote-me

./: .gitignore  ELIPTIC.md  README.md  dev.sh  dfx.json  package-lock.json  package.json  tsconfig.json  utils.ts
src/vote_me_backend/: Cargo.toml  vote_me_backend.did
src/vote_me_backend/src/: app.rs  auth.rs  ecdsa_api.rs  lib.rs  types.rs
tests/: wallet.test.ts
