[package]
name = "vote_me_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.2"
ic-cdk = "0.6.0"
ic-cdk-macros = "0.6.0"
serde = "1.0.163"

serde_json = "1.0"
ethereum-rlp = "0.2.3"
k256 = { version = "0.12.0", features = ["ecdsa"] }
# Enable `custom` feature of k256's getrandom dependency. See lib.rs for more details.
getrandom = { version = "0.2", features = ["custom"] }
sha2 = "0.10.2"
hex = "0.4.3"

ripemd = "0.1.1"
bs58 = "0.4.0"
bitcoin = "0.28.1"
ic-btc-types = { git = "https://github.com/dfinity/ic", rev = "0546cc21bc9260b934e93a2beccd669b5f292ff4" }
easy-hasher = "2.2.1"
libsecp256k1 = { version = "0.6.0", default-features = false, features = ["lazy-static-context"] }